﻿GNomEx Release Notes
---------------------

5.3.4.2 (12/14/2011)
--------------------
* Removed 'Downloads' link, fixed files refresh when selecting a new experiment, reset tab index to 0 when switching to a new experiment or from 'edit' to 'view' or vice-versa.
* Added check to insure that "description" cannot be used as the name for an annotation
* Added "Copy Column" feature to sample view
* Minor correction to GetAppUserPublic to add " Lab" to the labName string
* Fixed problem with not being able to log in after changing password
* Fixed user self register email problem when property for work auth admin had multiple emails.
* Many small fixes to sql in upgrade scripts

5.3.4.1 (12/13/2011)
--------------------
* Fix PropertyDictionary references in reset password, change password, register new user.
* Fix parameters on reset password, change password, register new user jsps.
* Added email confirmation to bioinformatics core when a next gen sequencing experiment is finished and has a genome build align to filled in or analysis instructions.

5.3.4 (12/12/2011)
--------------------
* Added dropdown for Organism to initial screen for external experiment registration.
* Made Organism field in Sample View read only for external experiment registration.
* Removed columns not selected in the Annotations tab for external experiments.
* Removed links/check boxes/fields: To GAIIx, Show QC Columns, Illumina Prep, Completed field for exter nal exps.
* Removed Sample Sequencing Run tab for external exps and made sure deleting corresponding samples does not initiate a prompt.
* Implemented check to require completion of any required annotation fields in Sample View.
* Removed Download link for external exps.
* Fixed null pointer problem in SequenceLane.java that caused XML reflection error for some Experiments.
* Fix bug in GetExperimentPickList that was causing error on next gen experiments that were not Illumina requests. (Bugs item #3444572)